--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,14 @@
         <module>springboot-starter-collection-dependencies</module>
         <module>springboot-starter-collection-b2</module>
         <module>springboot-starter-collection-plugin</module>
+         <module>springboot-starter-collection-modbus</module>
         <module>springboot-starter-collection-jdbc</module>
         <module>springboot-starter-collection-redis</module>
         <module>springboot-starter-collection-starters/spring-boot-starter-b2</module>
         <module>springboot-starter-collection-starters/spring-boot-starter-plugin</module>
         <module>springboot-starter-collection-starters/spring-boot-starter-jdbc</module>
         <module>springboot-starter-collection-starters/spring-boot-starter-redis</module>
+        <module>springboot-starter-collection-starters/spring-boot-starter-modbus</module>
     </modules>
 
     <properties>
