--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>com.anode</groupId>
     <artifactId>springboot-starter-collection</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -37,7 +37,7 @@
         <connection>scm:git:git://github.com/A-N-O-D-E-R/springboot-starter-collection.git</connection>
         <developerConnection>scm:git:git@github.com:A-N-O-D-E-R/springboot-starter-collection.git</developerConnection>
         <url>https://github.com/A-N-O-D-E-R/springboot-starter-collection</url>
-        <tag>HEAD</tag>
+        <tag>v0.0.1</tag>
     </scm>
 
     <dependencyManagement>
