--- a/springboot-starter-collection-dependencies/pom.xml
+++ b/springboot-starter-collection-dependencies/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.anode</groupId>
     <artifactId>springboot-starter-collection-dependencies</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <packaging>pom</packaging>
     
     <properties>
