--- a/springboot-starter-collection-dependencies/pom.xml
+++ b/springboot-starter-collection-dependencies/pom.xml
@@ -17,6 +17,20 @@
         <snappy.version>1.1.10.7</snappy.version>
     </properties>
 
+    <distributionManagement>
+        <repository>
+            <id>b2-releases</id>
+            <name>B2 Releases Repository</name>
+            <url>b2://A-N-O-D-E-R/maven-releases</url>
+        </repository>
+
+        <snapshotRepository>
+            <id>b2-snapshots</id>
+            <name>B2 Snapshots Repository</name>
+            <url>b2://A-N-O-D-E-R/maven-snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <build>
         <extensions>
             <extension>
@@ -25,6 +39,17 @@
                 <version>1.0.0</version>
             </extension>
         </extensions>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <goals>deploy</goals>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
     <dependencyManagement>
