--- a/springboot-starter-collection-dependencies/pom.xml
+++ b/springboot-starter-collection-dependencies/pom.xml
@@ -15,6 +15,9 @@
         <kryo.version>5.6.2</kryo.version>
         <modbus.version>3.1.0</modbus.version>
         <snappy.version>1.1.10.7</snappy.version>
+        <grpc.version>1.65.0</grpc.version>
+        <jmdns.version>3.5.9</jmdns.version>
+        <sila-java.version>0.1.0-SNAPSHOT</sila-java.version>
     </properties>
 
     <distributionManagement>
@@ -163,6 +166,43 @@
                 <version>${io.awspring.cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <!-- SiLA Client -->
+            <dependency>
+                <groupId>com.anode</groupId>
+                <artifactId>springboot-starter-collection-sila-client</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.anode</groupId>
+                <artifactId>spring-boot-starter-sila-client</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.silastandard</groupId>
+                <artifactId>sila-java-client</artifactId>
+                <version>${sila-java.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.jmdns</groupId>
+                <artifactId>jmdns</artifactId>
+                <version>${jmdns.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-netty-shaded</artifactId>
+                <version>${grpc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-stub</artifactId>
+                <version>${grpc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-protobuf</artifactId>
+                <version>${grpc.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
