:zap: new zabbix provider

--- a/pom.xml
+++ b/pom.xml
@@ -23,12 +23,14 @@
         <module>springboot-starter-collection-jdbc</module>
         <module>springboot-starter-collection-redis</module>
         <module>springboot-starter-collection-logging</module>
+        <module>springboot-starter-collection-zabbix</module>
         <module>springboot-starter-collection-starters/spring-boot-starter-b2</module>
         <module>springboot-starter-collection-starters/spring-boot-starter-plugin</module>
         <module>springboot-starter-collection-starters/spring-boot-starter-jdbc</module>
         <module>springboot-starter-collection-starters/spring-boot-starter-redis</module>
         <module>springboot-starter-collection-starters/spring-boot-starter-modbus</module>
         <module>springboot-starter-collection-starters/spring-boot-starter-logging</module>
+        <module>springboot-starter-collection-starters/spring-boot-starter-zabbix</module>
     </modules>
 
     <properties>
